[gd_scene load_steps=8 format=3 uid="uid://bvcyx2gvb822c"]

[ext_resource type="Texture2D" uid="uid://b8jpxcrm7bhvl" path="res://assets/icon.svg" id="1_1ftww"]
[ext_resource type="Script" uid="uid://dt8orla2jidtw" path="res://player/side_screen.gd" id="1_1x5p7"]
[ext_resource type="StyleBox" uid="uid://cyqon26itkt1j" path="res://btn_press_style.tres" id="3_l53wi"]
[ext_resource type="StyleBox" uid="uid://dr50ts51okksv" path="res://btn_hover_style.tres" id="4_1xwaj"]

[sub_resource type="Shader" id="Shader_aoaw7"]
code = "shader_type canvas_item;

uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_linear_mipmap;

uniform bool overlay = false;

uniform float scanlines_opacity : hint_range(0.0, 1.0) = 0.4;
uniform float scanlines_width : hint_range(0.0, 0.5) = 0.25;
uniform float grille_opacity : hint_range(0.0, 1.0) = 0.3;
uniform vec2 resolution = vec2(640.0, 480.0);

uniform bool pixelate = true;

uniform bool roll = true;
uniform float roll_speed = 8.0;
uniform float roll_size : hint_range(0.0, 100.0) = 15.0;
uniform float roll_variation : hint_range(0.1, 5.0) = 1.8;
uniform float distort_intensity : hint_range(0.0, 0.2) = 0.05;

uniform float noise_opacity : hint_range(0.0, 1.0) = 0.4;
uniform float noise_speed = 5.0;

uniform float static_noise_intensity : hint_range(0.0, 1.0) = 0.06;

uniform float aberration : hint_range(-1.0, 1.0) = 0.03;
uniform float brightness = 1.4;
uniform bool discolor = true;

uniform float warp_amount : hint_range(0.0, 5.0) = 1.0;
uniform bool clip_warp = false;

uniform float vignette_intensity = 0.4;
uniform float vignette_opacity : hint_range(0.0, 1.0) = 0.5;

vec2 random(vec2 uv){
    uv = vec2(dot(uv, vec2(127.1,311.7)), dot(uv, vec2(269.5,183.3)));
    return -1.0 + 2.0 * fract(sin(uv) * 43758.5453123);
}

float noise(vec2 uv) {
    vec2 uv_index = floor(uv);
    vec2 uv_fract = fract(uv);
    vec2 blur = smoothstep(0.0, 1.0, uv_fract);

    return mix(
        mix(dot(random(uv_index + vec2(0.0,0.0)), uv_fract - vec2(0.0,0.0)),
            dot(random(uv_index + vec2(1.0,0.0)), uv_fract - vec2(1.0,0.0)), blur.x),
        mix(dot(random(uv_index + vec2(0.0,1.0)), uv_fract - vec2(0.0,1.0)),
            dot(random(uv_index + vec2(1.0,1.0)), uv_fract - vec2(1.0,1.0)), blur.x), 
        blur.y
    ) * 0.5 + 0.5;
}

vec2 warp(vec2 uv){
    vec2 delta = uv - 0.5;
    float delta2 = dot(delta.xy, delta.xy);
    float delta4 = delta2 * delta2;
    float delta_offset = delta4 * warp_amount;
    return uv + delta * delta_offset;
}

float border (vec2 uv){
    float radius = min(warp_amount, 0.08);
    radius = max(min(min(abs(radius * 2.0), abs(1.0)), abs(1.0)), 1e-5);
    vec2 abs_uv = abs(uv * 2.0 - 1.0) - vec2(1.0, 1.0) + radius;
    float dist = length(max(vec2(0.0), abs_uv)) / radius;
    float square = smoothstep(0.96, 1.0, dist);
    return clamp(1.0 - square, 0.0, 1.0);
}

float vignette(vec2 uv){
    uv *= 1.0 - uv.xy;
    float vignette = uv.x * uv.y * 15.0;
    return pow(vignette, vignette_intensity * vignette_opacity);
}

void fragment()
{
    vec2 uv = overlay ? warp(SCREEN_UV) : warp(UV);
    vec2 text_uv = uv;
    vec2 roll_uv = vec2(0.0);
    float time = roll ? TIME : 0.0;

    if (pixelate){
        text_uv = ceil(uv * resolution) / resolution;
    }

    float roll_line = 0.0;
    if (roll || noise_opacity > 0.0){
        roll_line = smoothstep(0.3, 0.9, sin(uv.y * roll_size - (time * roll_speed)));
        roll_line *= roll_line * smoothstep(0.3, 0.9, sin(uv.y * roll_size * roll_variation - (time * roll_speed * roll_variation)));
        roll_uv = vec2((roll_line * distort_intensity * (1.-UV.x)), 0.0);
    }

    vec4 text;
    if (roll){
        text.r = texture(SCREEN_TEXTURE, text_uv + roll_uv * 0.8 + vec2(aberration, 0.0) * .1).r;
        text.g = texture(SCREEN_TEXTURE, text_uv + roll_uv * 1.2 - vec2(aberration, 0.0) * .1).g;
        text.b = texture(SCREEN_TEXTURE, text_uv + roll_uv).b;
        text.a = 1.0;
    } else {
        text.r = texture(SCREEN_TEXTURE, text_uv + vec2(aberration, 0.0) * .1).r;
        text.g = texture(SCREEN_TEXTURE, text_uv - vec2(aberration, 0.0) * .1).g;
        text.b = texture(SCREEN_TEXTURE, text_uv).b;
        text.a = 1.0;
    }

    float r = text.r;
    float g = text.g;
    float b = text.b;

    uv = warp(UV);

    if (grille_opacity > 0.0){
        float g_r = smoothstep(0.85, 0.95, abs(sin(uv.x * (resolution.x * 3.14159265))));
        r = mix(r, r * g_r, grille_opacity);

        float g_g = smoothstep(0.85, 0.95, abs(sin(1.05 + uv.x * (resolution.x * 3.14159265))));
        g = mix(g, g * g_g, grille_opacity);

        float b_b = smoothstep(0.85, 0.95, abs(sin(2.1 + uv.x * (resolution.x * 3.14159265))));
        b = mix(b, b * b_b, grille_opacity);
    }

    text.r = clamp(r * brightness, 0.0, 1.0);
    text.g = clamp(g * brightness, 0.0, 1.0);
    text.b = clamp(b * brightness, 0.0, 1.0);

    float scanlines = 0.5;
    if (scanlines_opacity > 0.0){
        scanlines = smoothstep(scanlines_width, scanlines_width + 0.5, abs(sin(uv.y * (resolution.y * 3.14159265))));
        text.rgb = mix(text.rgb, text.rgb * vec3(scanlines), scanlines_opacity);
    }

    if (noise_opacity > 0.0){
        float n = smoothstep(0.4, 0.5, noise(uv * vec2(2.0, 200.0) + vec2(10.0, (TIME * (noise_speed)))));
        roll_line *= n * scanlines * clamp(random((ceil(uv * resolution) / resolution) + vec2(TIME * 0.8, 0.0)).x + 0.8, 0.0, 1.0);
        text.rgb = clamp(mix(text.rgb, text.rgb + roll_line, noise_opacity), vec3(0.0), vec3(1.0));
    }

    if (static_noise_intensity > 0.0){
        text.rgb += clamp(random((ceil(uv * resolution) / resolution) + fract(TIME)).x, 0.0, 1.0) * static_noise_intensity;
    }

    text.rgb *= border(uv);
    text.rgb *= vignette(uv);

    if (clip_warp){
        text.a = border(uv);
    }

    if (discolor){
        float saturation = 0.5;
        float contrast = 1.2;
        vec3 greyscale = vec3(text.r + text.g + text.b) / 3.;
        text.rgb = mix(text.rgb, greyscale, saturation);

        float midpoint = pow(0.5, 2.2);
        text.rgb = (text.rgb - vec3(midpoint)) * contrast + midpoint;
    }

    COLOR = text;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gvqxy"]
shader = SubResource("Shader_aoaw7")
shader_parameter/overlay = false
shader_parameter/scanlines_opacity = 0.0
shader_parameter/scanlines_width = 0.0
shader_parameter/grille_opacity = 0.0
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 0.505
shader_parameter/roll_size = 17.1790008160025
shader_parameter/roll_variation = 0.10000000149012
shader_parameter/distort_intensity = 0.146000006935
shader_parameter/noise_opacity = 0.1230000058425
shader_parameter/noise_speed = 3.51
shader_parameter/static_noise_intensity = 0.5690000270275
shader_parameter/aberration = 0.7050000809874999
shader_parameter/brightness = 1.07
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.10000000475
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1xwaj"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="SideScreen" type="SubViewportContainer"]
light_mask = 0
custom_minimum_size = Vector2(160, 190)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 216.0
offset_top = -132.0
offset_right = 376.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
script = ExtResource("1_1x5p7")

[node name="SubViewport" type="SubViewport" parent="."]
handle_input_locally = false
size = Vector2i(160, 190)
render_target_update_mode = 4

[node name="Background" type="TextureRect" parent="SubViewport"]
unique_name_in_owner = true
visibility_layer = 3
texture_filter = 1
material = SubResource("ShaderMaterial_gvqxy")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1ftww")
expand_mode = 1

[node name="MainMenu" type="VBoxContainer" parent="SubViewport/Background"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -86.0
offset_right = 70.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button1" type="Button" parent="SubViewport/Background/MainMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
focus_neighbor_left = NodePath("../Button4")
focus_neighbor_top = NodePath("../Button4")
focus_neighbor_right = NodePath("../Button2")
focus_neighbor_bottom = NodePath("../Button2")
theme_override_font_sizes/font_size = 23
theme_override_styles/pressed = ExtResource("3_l53wi")
theme_override_styles/hover = ExtResource("4_1xwaj")
theme_override_styles/focus = ExtResource("4_1xwaj")
text = "START"

[node name="Button2" type="Button" parent="SubViewport/Background/MainMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
focus_neighbor_left = NodePath("../Button1")
focus_neighbor_top = NodePath("../Button1")
focus_neighbor_right = NodePath("../Button3")
focus_neighbor_bottom = NodePath("../Button3")
theme_override_font_sizes/font_size = 23
theme_override_styles/pressed = ExtResource("3_l53wi")
theme_override_styles/hover = ExtResource("4_1xwaj")
theme_override_styles/focus = ExtResource("4_1xwaj")
text = "START"

[node name="Button3" type="Button" parent="SubViewport/Background/MainMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
focus_neighbor_left = NodePath("../Button2")
focus_neighbor_top = NodePath("../Button2")
focus_neighbor_right = NodePath("../Button4")
focus_neighbor_bottom = NodePath("../Button4")
theme_override_font_sizes/font_size = 23
theme_override_styles/pressed = ExtResource("3_l53wi")
theme_override_styles/hover = ExtResource("4_1xwaj")
theme_override_styles/focus = ExtResource("4_1xwaj")
text = "START"

[node name="Button4" type="Button" parent="SubViewport/Background/MainMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
focus_neighbor_left = NodePath("../Button3")
focus_neighbor_top = NodePath("../Button3")
focus_neighbor_right = NodePath("../Button1")
focus_neighbor_bottom = NodePath("../Button1")
theme_override_font_sizes/font_size = 23
theme_override_styles/pressed = ExtResource("3_l53wi")
theme_override_styles/hover = ExtResource("4_1xwaj")
theme_override_styles/focus = ExtResource("4_1xwaj")
text = "START"

[node name="GameMenu" type="MarginContainer" parent="SubViewport/Background"]
custom_minimum_size = Vector2(150, 180)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="Panel" type="Panel" parent="SubViewport/Background/GameMenu"]
layout_mode = 2

[node name="HUD_Control" type="Control" parent="SubViewport/Background/GameMenu/Panel"]
custom_minimum_size = Vector2(145, 95)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.5
offset_right = 72.5
offset_bottom = 95.0
grow_horizontal = 2

[node name="LabelControl" type="Label" parent="SubViewport/Background/GameMenu/Panel/HUD_Control"]
custom_minimum_size = Vector2(140, 95)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -47.5
offset_right = 70.0
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 6
theme_override_font_sizes/font_size = 17
text = "Left Click: Select
Right Click: Move
Space: Press Btn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelDetection" type="Label" parent="SubViewport/Background/GameMenu/Panel/HUD_Control"]
visible = false
custom_minimum_size = Vector2(140, 95)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -47.5
offset_right = 70.0
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5157094, 1.353256, 0.65181077, 1)
theme_override_constants/line_spacing = 6
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1

[node name="HUD_Send" type="Control" parent="SubViewport/Background/GameMenu/Panel"]
visible = false
custom_minimum_size = Vector2(145, 95)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.5
offset_right = 72.5
offset_bottom = 95.0
grow_horizontal = 2

[node name="LabelSend" type="Label" parent="SubViewport/Background/GameMenu/Panel/HUD_Send"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -46.5
offset_right = 20.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1

[node name="SendShipBar" type="ProgressBar" parent="SubViewport/Background/GameMenu/Panel/HUD_Send"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 30)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -35.0
offset_right = 65.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0

[node name="HUD_Stats" type="Control" parent="SubViewport/Background/GameMenu/Panel"]
visible = false
custom_minimum_size = Vector2(145, 95)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.5
offset_right = 72.5
offset_bottom = 95.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport/Background/GameMenu/Panel/HUD_Stats"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.0
offset_right = 65.0
offset_bottom = 93.0
grow_horizontal = 2
theme_override_constants/separation = 1

[node name="HP" type="VBoxContainer" parent="SubViewport/Background/GameMenu/Panel/HUD_Stats/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="LabelHP" type="Label" parent="SubViewport/Background/GameMenu/Panel/HUD_Stats/VBoxContainer/HP"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.28538418, 1.2223895, 0.6308721, 1)
theme_override_font_sizes/font_size = 17
text = "HULL:  48%"

[node name="FUEL" type="VBoxContainer" parent="SubViewport/Background/GameMenu/Panel/HUD_Stats/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="LabelFUEL" type="Label" parent="SubViewport/Background/GameMenu/Panel/HUD_Stats/VBoxContainer/FUEL"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1.1909814, 0.5680561, 0.33773082, 1)
theme_override_font_sizes/font_size = 18
text = "FUEL:  56%"

[node name="Salvage" type="VBoxContainer" parent="SubViewport/Background/GameMenu/Panel/HUD_Stats/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="LabelLOAD" type="Label" parent="SubViewport/Background/GameMenu/Panel/HUD_Stats/VBoxContainer/Salvage"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "LOAD:  100%"

[node name="LoadBar" type="ProgressBar" parent="SubViewport/Background/GameMenu/Panel/HUD_Stats/VBoxContainer/Salvage"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 15)
layout_mode = 2
theme_override_font_sizes/font_size = 11
theme_override_styles/fill = SubResource("StyleBoxFlat_1xwaj")
value = 65.0
show_percentage = false

[node name="HUD_GOUP" type="Control" parent="SubViewport/Background/GameMenu/Panel"]
visible = false
custom_minimum_size = Vector2(145, 95)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.5
offset_right = 72.5
offset_bottom = 95.0
grow_horizontal = 2

[node name="LabelGOUP" type="Label" parent="SubViewport/Background/GameMenu/Panel/HUD_GOUP"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 28.0
grow_horizontal = 2
theme_override_constants/line_spacing = 1
theme_override_font_sizes/font_size = 17
text = "Fuel Not Full
Gather More
with Drones"
horizontal_alignment = 1

[node name="SendShipBar" type="ProgressBar" parent="SubViewport/Background/GameMenu/Panel/HUD_GOUP"]
custom_minimum_size = Vector2(140, 12)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -17.0
offset_right = 65.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
value = 60.0
show_percentage = false

[node name="B1" type="Button" parent="SubViewport/Background/GameMenu/Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(135, 35)
layout_mode = 0
offset_left = 5.0
offset_top = 97.0
offset_right = 140.0
offset_bottom = 132.0
focus_neighbor_left = NodePath("../HBoxContainer/B3")
focus_neighbor_top = NodePath("../HBoxContainer/B3")
focus_neighbor_right = NodePath("../HBoxContainer/B2")
focus_neighbor_bottom = NodePath("../HBoxContainer/B2")
theme_override_font_sizes/font_size = 18
theme_override_styles/pressed = ExtResource("3_l53wi")
theme_override_styles/hover = ExtResource("4_1xwaj")
theme_override_styles/focus = ExtResource("4_1xwaj")
text = "START"

[node name="HBoxContainer" type="HBoxContainer" parent="SubViewport/Background/GameMenu/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -67.0
offset_top = -43.0
offset_right = 67.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0

[node name="B2" type="Button" parent="SubViewport/Background/GameMenu/Panel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(65, 35)
layout_mode = 2
focus_neighbor_left = NodePath("../../B1")
focus_neighbor_top = NodePath("../../B1")
focus_neighbor_right = NodePath("../B3")
focus_neighbor_bottom = NodePath("../B3")
theme_override_font_sizes/font_size = 18
theme_override_styles/pressed = ExtResource("3_l53wi")
theme_override_styles/hover = ExtResource("4_1xwaj")
theme_override_styles/focus = ExtResource("4_1xwaj")
text = "START"

[node name="B3" type="Button" parent="SubViewport/Background/GameMenu/Panel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(65, 35)
layout_mode = 2
focus_neighbor_left = NodePath("../B2")
focus_neighbor_top = NodePath("../B2")
focus_neighbor_right = NodePath("../../B1")
focus_neighbor_bottom = NodePath("../../B1")
theme_override_font_sizes/font_size = 18
theme_override_styles/pressed = ExtResource("3_l53wi")
theme_override_styles/hover = ExtResource("4_1xwaj")
theme_override_styles/focus = ExtResource("4_1xwaj")
text = "START"
